# pickaper

./: Makefile  README.md  pyproject.toml
cicd/: .pylint.cfg  Dockerfile  old_dockerfile  run_unittests.sh  test.env
pickaper/: __main__.py  cli.py  delivary_generator.py  logist.py  pickup_box.py  pickup_box_queue.py  pickup_car.py  runner.py  settings.py  types.py
tests/: __init__.py  pickup_box.py  pickup_box_queue.py  pickup_car.py  tools.py
